<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <FrameLayout android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="10dp"/>
    <Button android:id="@+id/menu_play"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_play"
            android:textSize="20sp"
            android:background="@drawable/play_button"
            android:textColor="#000000"/>
    <FrameLayout android:layout_weight="2"
            android:layout_width="200dp"
            android:layout_height="10dp"/>
    <Button android:id="@+id/menu_options"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_options"
            android:textSize="20sp"
            android:background="@drawable/other_button"
            android:textColor="#000000"/>
    <FrameLayout android:layout_weight="2"
            android:layout_width="200dp"
            android:layout_height="10dp"/>
    <Button android:id="@+id/menu_quit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_quit"
            android:textSize="20sp"
            android:background="@drawable/quit_button"
            android:textColor="#000000"/>
    <FrameLayout android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="10dp"/>
</LinearLayout>
